<?xml version="1.0"?>
<package format="2">
    <name>cardsflow_rviz</name>
    <version>0.0.0</version>
    <description>rviz plugin for cardsflow robots</description>
    <maintainer email="st@gi.ai">Simon Trendel</maintainer>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>
    <depend>roscpp</depend>
    <depend>rosbag</depend>
    <depend>std_msgs</depend>
    <depend>message_generation</depend>
    <depend>message_runtime</depend>
    <depend>common_utilities</depend>
    <depend>roboy_middleware_msgs</depend>
    <depend>rviz</depend>

    <export>
        <rviz plugin="${prefix}/cardsflow_rviz.xml"/>
    </export>
</package>
